--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,9 @@
 @import 'bootstrap/scss/bootstrap';
 
-.button5 {border-radius: 12px};
+.button5 {
+    border-radius: 12px;
+    background-image: linear-gradient(to bottom right, darkorange, red);
+};
 
 body{
     background-color: #fff7f8;
@@ -36,6 +39,13 @@ body{
 .join-now-button{
     border-color: #ff5c3f;
     width: 250px;
+};
+
+.register-now-button{
+    background-image: linear-gradient(to bottom right, darkorange, red);
+    width: 250px;
+    border-color: #ff5c3f;
+    border-radius: 12px;
 }
 
 .whitepage{
@@ -117,4 +127,56 @@ body{
 
 .round-borders{
     border-radius: 8px;
+};
+
+.mistyrose{
+    background-image: url("../public/mistybackground.jpg");
+    background-size: cover;
+};
+
+footer{
+    background-color: white;
 }
+
+
+// .reviews-gallery{
+//     display: grid;
+//     grid-template-columns: repeat(6, 1fr);
+//     grid-template-rows: auto;
+//     grid-gap: .5rem;
+//     grid-template-areas: 
+//         "un un deux deux trois trois"
+//         "quatre quatre cinq cinq six six";
+//     width: 100%;
+//     height: 50rem;
+// };
+
+// .reviews-gallery a{
+//     width: 100%;
+//     height: 25rem;
+//     background-position: center;
+//     background-size: cover;
+// };
+
+// .un{
+//     grid-area: un;
+//     background-image: url("../public/typing.jpg");
+//     border-radius: 10px;
+// };
+
+// .deux{
+
+// };
+
+// .trois{
+
+// };
+
+
+// .cinq{
+
+// };
+
+// .six{
+
+// };
